==========
04/05/2009
==========

- Bugfixes
- Implementacao de nova estrutura de exibicao do dashboard
- Inclusao de botao para maximizar ou minimizar o queue

HORAS TRABALHADAS: 8h

==========
06/05/2009
==========

- Alteração do layout para páginas internas
- Listagem de feeds, cadastro e ordenacao atualizados para o novo layout
- Inclusao de algoritmo de ordenacao p/ feeds

HORAS TRABALHADAS: 6h

==========
07/05/2009
==========

- Organizacao e padronizacao dos metodos no model
- Organizacao e otimizacao das consultas SQL de feeds
- Alteracao do Model para escrever objecto como XML
- Exibicao de URL na listagem de feeds
- Inclusao de listagem de blogs
- Ajustes no controller Profile e model UserProfile
- Inclusao de listagem de feeds no dashboard

HORAS TRABALHADAS: 6h

==========
08/05/2009
==========

- Inclusao de listagem de feeds no dashboard, modos all e threaded
- Inclusao de listagem de articles no modo all

HORAS TRABALHADAS: 4h

==========
10/05/2009
==========

- Inclusao de listagem de feeds no dashboard, modos all e threaded
- Exibicao de artigo completo
- Inclusao de exibicao de feeds no modo lista ou expandido

HORAS TRABALHADAS: 10h

==========
11/05/2009
==========

- Bugfixes na exibicao de feeds no dashboard, bugfixes no cadastro de feeds

HORAS TRABALHADAS: 2h

==========
13/05/2009
==========

- Bugfixes e ajustes no model
- Implementacao de metodo para teste de login / publicacao no cadastro de blogs
- Ajustes no cadastro de blogs

HORAS TRABALHADAS: 8h

==========
14/05/2009
==========

- Inclusao de botao / funcionalidade DELETE na listagem de blogs
- Inclusao de botao / funcionalidade EDIT na listagem de blogs

HORAS TRABALHADAS: 4h

==========
15/05/2009
==========

- Bugfixes com javascript no IE

HORAS TRABALHADAS: 1h

==========
16/05/2009
==========

- Correcoes no cadastro de feeds

HORAS TRABALHADAS: 3h