@@ -91,5 +91,6 @@ HORAS TRABALHADAS: 1h
 ==========
 
 - Correcoes no cadastro de feeds
+- Inclusao de opcao excluir feeds, blogs e entradas no queue (deleted)
 
-HORAS TRABALHADAS: 3h
+HORAS TRABALHADAS: 5h
